<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postsListViewWhole"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/post_items_separator"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!--書籍情報-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginLeft="0dp"
        android:orientation="horizontal">

        <!--書籍画像-->
        <!--<ImageView-->
        <!--android:id="@+id/image"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@drawable/book_image_sample2"-->
        <!--android:visibility="gone" />-->
        <!--&lt;!&ndash;TODO 画像を表示するときにgoneを解除する&ndash;&gt;-->
        <ImageView
            android:id="@+id/image"
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/post_item_icon"
            android:visibility="visible" />


        <!--書籍情報-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">

            <!--ID保持用（非表示）-->
            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <!--タイトル-->
            <TextView
                android:id="@+id/title"
                style="@style/AsudokuColumn.Read"
                android:text="@string/samplePostTitle"
                android:textColor="@color/colorText"
                android:textSize="@dimen/postIndexTitleTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <!--評価-->
                <include
                    android:id="@+id/include_views_evaluation_star_posts"
                    layout="@layout/viewgroup_evaluation_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <!--カテゴリ-->
                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/samplePostCategory"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/postIndexCategoryTextSIze" />

                <!--作成日時-->
                <TextView
                    android:id="@+id/createdDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/samplePostCreatedDate"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/postIndexCreatedDateTextSIze" />

            </LinearLayout>

        </LinearLayout>

        <!--&lt;!&ndash;メニューボタン&ndash;&gt;-->
        <!--<ImageView-->
        <!--android:id="@+id/menu_button"-->
        <!--android:layout_width="40dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_margin="0dp"-->
        <!--android:padding="10dp"-->
        <!--android:src="@drawable/ic_down_arrow"-->
        <!--android:tint="@color/colorIcon" />-->

    </LinearLayout>

    <!--得たもの-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <include
            android:id="@+id/acquisition1"
            layout="@layout/viewgroup_post_acquisition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/acquisition2"
            layout="@layout/viewgroup_post_acquisition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/acquisition3"
            layout="@layout/viewgroup_post_acquisition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--アクション-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <include
            android:id="@+id/action1"
            layout="@layout/viewgroup_post_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/action2"
            layout="@layout/viewgroup_post_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/action3"
            layout="@layout/viewgroup_post_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>